sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:19: error: ')' expected but 'if' found.
      if (!test){
      ^